Xây dựng UI phần Header #4

--- a/src/components/Layout/component/Header/Header.module.scss
+++ b/src/components/Layout/component/Header/Header.module.scss
@@ -92,3 +92,12 @@
         background-color: rgba(22, 24, 35, 0.06);
     }
 }
+
+.more-btn {
+    cursor: pointer;
+    margin-left: 16px;
+    font-size: 2rem;
+    padding: 4px 8px;
+    background-color: transparent;
+}
+
