--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -28,6 +28,12 @@
     margin-left: 8px;
 }
 
+.icon {
+    display: inline-block;
+    width: 20px;
+    text-align: center;
+}
+
 //Button types
 .text {
     border-color: rgba(22, 24, 35, 0.12);
