--- a/src/components/Layout/component/Header/Header.module.scss
+++ b/src/components/Layout/component/Header/Header.module.scss
@@ -12,6 +12,7 @@
 }
 
 .inner {
+    padding: 0 var(--default-layout-horizontal-spacer);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -100,4 +101,3 @@
     padding: 4px 8px;
     background-color: transparent;
 }
-
