--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -8,6 +8,7 @@
     min-width: 100px;
     padding: 8px 16px;
     border-radius: 4px;
+    margin: 0 12px;
     cursor: pointer;
     border: 1px solid transparent;
     background-color: var(--white);
