--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -39,3 +39,20 @@ a[href] {
     color: var(--text-color);
     text-decoration: none;
 }
+
+//Tippy
+body {
+    .tippy-box {
+        padding: 4px;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 22px;
+        background-color: rgba(84, 84, 84, 0.92);
+        color: rgb(255, 255, 255);
+    }
+}
+
+.tippy-box[data-placement^='bottom'] > .tippy-arrow:before {
+    color: rgba(84, 84, 84, 0.92);
+    top: -8px;
+}
