--- a/src/components/Layout/component/Header/Header.module.scss
+++ b/src/components/Layout/component/Header/Header.module.scss
@@ -94,6 +94,28 @@
     }
 }
 
+//Action
+.action {
+    display: flex;
+    align-items: center;
+}
+
+.actions-btn {
+    background-color: #fff;
+    font-size: 2.2rem;
+    padding: 5px 12px;
+    cursor: pointer;
+}
+
+.user-avarta {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-left: 16px;
+    cursor: pointer;
+}
+
 .more-btn {
     cursor: pointer;
     margin-left: 16px;
