--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -15,9 +15,14 @@
     width: 100%;
     justify-content: flex-start;
     border-radius: 0;
-    font-weight: 600;
+    font-weight: 400;
     padding: 8px 16px;
     line-height: 1.5;
+
+    &.separate {
+        border-top: 1px solid rgba(22, 24, 35, 0.12);
+    }
+
     &:hover {
         background-color: rgba(22, 24, 35, 0.03);
     }
