--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,10 +1,10 @@
 .wrapper {
+    font-family: 'ProximaNova', sans-serif;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     font-size: 1.6rem;
-    font-weight: 700;
     min-width: 100px;
     padding: 8px 16px;
     border-radius: 4px;
