--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -7,6 +7,7 @@
     --default-layout-width: 1150px;
     --default-layout-horizontal-spacer: 24px;
     --default-layout-header-height: 60px;
+    --font-family: 'ProximaNova', sans-serif;
 }
 
 //Font embled
@@ -45,7 +46,7 @@ html {
 }
 
 body {
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeLegibility;
