--- a/src/components/Layout/component/Header/Header.module.scss
+++ b/src/components/Layout/component/Header/Header.module.scss
@@ -20,6 +20,10 @@
     width: var(--default-layout-width);
 }
 
+.logo-link {
+    display: flex;
+}
+
 //Action
 .action {
     display: flex;
@@ -35,9 +39,25 @@
 }
 
 .actions-btn {
+    position: relative;
     background-color: #fff;
     padding: 5px 12px;
     cursor: pointer;
+}
+
+.badge {
+    position: absolute;
+    top: -3px;
+    right: 0px;
+    padding: 0px 6px;
+    height: 2rem;
+    line-height: 2rem;
+    border-radius: 10px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: var(--white);
+    font-family: var(--font-family);
+    background-color: var(--primary);
 }
 
 .user-avarta {
