--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -11,6 +11,13 @@
     padding-bottom: 8px;
 }
 
+//Menu-body
+.menu-body {
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+//Menu-item
 .menu-item {
     width: 100%;
     justify-content: flex-start;
@@ -33,6 +40,7 @@
     margin-top: -8px;
     position: relative;
     height: 50px;
+    flex-shrink: 0;
 }
 
 .back-btn {
